# sundials

./: .gitignore  CMakeLists.txt
config/: DownloadPardiso.cmake  FindPardiso.cmake  FindUMFPACK.cmake  SundialsAddTest.cmake  SundialsBlas.cmake  SundialsFortran.cmake  SundialsLapack.cmake  SundialsPARDISO.cmake  SundialsUMFPACK.cmake  utilities.cmake
examples/cvode/serial/: CMakeLists.txt  cvAdvDiff_bnd_UpdJac.c  cvRoberts_pardiso.c  cvRoberts_pardiso.out  cvRoberts_umfpack.c  cvRoberts_umfpack.out
examples/sunlinsol/: CMakeLists.txt
examples/sunlinsol/pardiso/: CMakeLists.txt  test_sunlinsol_pardiso.c
examples/sunlinsol/umfpack/: CMakeLists.txt  test_sunlinsol_umfpack.c
include/cvode/: cvode.h
include/sundials/: sundials_config.in  sundials_linearsolver.h
include/sunlinsol/: sunlinsol_pardiso.h  sunlinsol_umfpack.h
src/cvode/: CMakeLists.txt  cvode.c  cvode_bandpre.c  cvode_diag.c  cvode_direct.c  cvode_impl.h  cvode_spils.c
src/nvec_openmp/: CMakeLists.txt
src/nvector/openmp/: CMakeLists.txt
src/sunlinsol/: CMakeLists.txt
src/sunlinsol/lapackband/: CMakeLists.txt  sunlinsol_lapackband.c
src/sunlinsol/lapackdense/: CMakeLists.txt  sunlinsol_lapackdense.c
src/sunlinsol/pardiso/: CMakeLists.txt  README  fsunlinsol_pardiso.h  sunlinsol_pardiso.c
src/sunlinsol/spbcgs/: CMakeLists.txt
src/sunlinsol/spfgmr/: CMakeLists.txt
src/sunlinsol/umfpack/: CMakeLists.txt  README  sunlinsol_umfpack.c
src/sunlinsol_lapackband/: CMakeLists.txt
src/sunlinsol_lapackdense/: CMakeLists.txt
src/sunlinsol_pardiso/: CMakeLists.txt  README  fsunlinsol_pardiso.c  sunlinsol_pardiso.c
src/sunmat_sparse/: sunmatrix_sparse.c-new
